--- a/git/SmartKid/app/src/main/res/layout/activity_set_time_play.xml
+++ b/git/SmartKid/app/src/main/res/layout/activity_set_time_play.xml
@@ -32,13 +32,19 @@
                 android:orientation="vertical"
                 android:layout_height="0dp">
        <LinearLayout
-           android:layout_weight="2"
+           android:layout_weight="3"
            android:gravity="center"
+           android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <TextView
                android:id="@+id/played"
                android:text="Hôm nay đã chơi: 0 phút"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content" />
+           <TextView
+               android:id="@+id/playtime"
+               android:text="Giới hạn hiện tại: 0 phút"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
