--- a/git/SmartKid/app/src/main/res/layout/activity_chosse_style.xml
+++ b/git/SmartKid/app/src/main/res/layout/activity_chosse_style.xml
@@ -72,11 +72,12 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="9">
+
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:src="@drawable/gautruc"
-                android:onClick="clickToThinking"/>
+                android:onClick="clickToThinking"
+                android:src="@drawable/gautruc" />
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
