--- a/git/SmartKid/app/src/main/res/layout/activity_maze_vitory.xml
+++ b/git/SmartKid/app/src/main/res/layout/activity_maze_vitory.xml
@@ -18,31 +18,34 @@
         android:orientation="vertical">
 
         <pl.droidsonroids.gif.GifImageView
+            android:id="@+id/khi"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:src="@drawable/maze_khian" />
+            />
 
         <pl.droidsonroids.gif.GifImageView
+            android:id="@+id/khi1"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:src="@drawable/maze_khivui" />
+            />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="3"
-        android:background="@drawable/maze_vitory_bg"
+
         android:orientation="vertical">
 
         <ImageView
+            android:id="@+id/nguoi"
             android:onClick="ClickToOK"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="3"
-            android:src="@drawable/maze_victory_caption" />
+            />
 
 
     </LinearLayout>
