--- a/git/SmartKid/app/src/main/res/layout/activity_victory.xml
+++ b/git/SmartKid/app/src/main/res/layout/activity_victory.xml
@@ -7,18 +7,18 @@
     android:orientation="horizontal"
     tools:context=".VictoryActivity">
     <ImageView
+        android:id="@+id/win"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:src="@drawable/win"
         android:onClick="clickToFinish"
         />
 
     <ImageView
+        android:id="@+id/win1"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:src="@drawable/win1"
         android:onClick="clickToFinish"
         />
 
