--- a/git/SmartKid/app/src/main/res/layout/activity_arrange.xml
+++ b/git/SmartKid/app/src/main/res/layout/activity_arrange.xml
@@ -36,8 +36,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_margin="5dp"
-                    android:layout_weight="1"
                     android:scaleType="fitXY"
+                    android:layout_weight="1"
+
                      />
             </LinearLayout>
 
@@ -125,8 +126,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_margin="1dp"
-                        android:scaleType="fitXY"
-                        android:src="@drawable/amo2" />
+                        android:scaleType="fitXY" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -139,8 +139,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_margin="1dp"
-                        android:scaleType="fitXY"
-                        android:src="@drawable/amo3" />
+                        android:scaleType="fitXY" />
                 </LinearLayout>
             </LinearLayout>
 
