--- a/git/SmartKid/app/src/main/res/layout/activity_feed_animal.xml
+++ b/git/SmartKid/app/src/main/res/layout/activity_feed_animal.xml
@@ -25,7 +25,7 @@
             android:layout_weight="1">
 
             <ImageView
-                android:id="@+id/back"
+                android:id="@+id/back2"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:onClick="ClickToFinish"
@@ -165,7 +165,8 @@
                 android:id="@+id/feedanimal_img_ponywish"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:src="@drawable/anhnull" />
+                />
+
         </LinearLayout>
 
         <LinearLayout
