--- a/git/SmartKid/app/src/main/res/layout/activity_pick_same_picture.xml
+++ b/git/SmartKid/app/src/main/res/layout/activity_pick_same_picture.xml
@@ -35,7 +35,7 @@
                     android:layout_weight="1">
 
                     <ImageView
-                        android:id="@+id/a1"
+                        android:id="@+id/pk1"
                         android:tag="0"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
@@ -53,7 +53,7 @@
                     android:layout_weight="1">
 
                     <ImageView
-                        android:id="@+id/a2"
+                        android:id="@+id/pk2"
                         android:tag="1"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
@@ -77,7 +77,7 @@
                     android:layout_weight="1">
 
                     <ImageView
-                        android:id="@+id/a3"
+                        android:id="@+id/pk3"
                         android:tag="2"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
@@ -95,7 +95,7 @@
                     android:layout_weight="1">
 
                     <ImageView
-                        android:id="@+id/a4"
+                        android:id="@+id/pk4"
                         android:tag="3"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
@@ -126,7 +126,7 @@
                     android:layout_weight="1">
 
                     <ImageView
-                        android:id="@+id/a9"
+                        android:id="@+id/pk9"
                         android:tag="8"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
@@ -144,7 +144,7 @@
                     android:layout_weight="1">
 
                     <ImageView
-                        android:id="@+id/a10"
+                        android:id="@+id/pk10"
                         android:tag="9"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
@@ -167,7 +167,7 @@
                     android:layout_weight="1">
 
                     <ImageView
-                        android:id="@+id/a11"
+                        android:id="@+id/pk11"
                         android:tag="10"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
@@ -185,7 +185,7 @@
                     android:layout_weight="1">
 
                     <ImageView
-                        android:id="@+id/a12"
+                        android:id="@+id/pk12"
                         android:tag="11"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
@@ -223,7 +223,7 @@
                     android:layout_weight="1">
 
                     <ImageView
-                        android:id="@+id/a5"
+                        android:id="@+id/pk5"
                         android:tag="4"
                         android:layout_width="match_parent"
                         android:scaleType="fitXY"
@@ -241,7 +241,7 @@
                     android:layout_weight="1">
 
                     <ImageView
-                        android:id="@+id/a6"
+                        android:id="@+id/pk6"
                         android:tag="5"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
@@ -264,7 +264,7 @@
                     android:layout_weight="1">
 
                     <ImageView
-                        android:id="@+id/a7"
+                        android:id="@+id/pk7"
                         android:tag="6"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
@@ -282,7 +282,7 @@
                     android:layout_weight="1">
 
                     <ImageView
-                        android:id="@+id/a8"
+                        android:id="@+id/pk8"
                         android:tag="7"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
@@ -312,7 +312,7 @@
                     android:layout_weight="1">
 
                     <ImageView
-                        android:id="@+id/a13"
+                        android:id="@+id/pk13"
                         android:tag="12"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
@@ -330,7 +330,7 @@
                     android:layout_weight="1">
 
                     <ImageView
-                        android:id="@+id/a14"
+                        android:id="@+id/pk14"
                         android:tag="13"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
@@ -353,7 +353,7 @@
                     android:layout_weight="1">
 
                     <ImageView
-                        android:id="@+id/a15"
+                        android:id="@+id/pk15"
                         android:tag="14"
                         android:layout_width="match_parent"
                         android:scaleType="fitXY"
@@ -371,7 +371,7 @@
                     android:layout_weight="1">
 
                     <ImageView
-                        android:id="@+id/a16"
+                        android:id="@+id/pk16"
                         android:tag="15"
                         android:layout_width="match_parent"
                         android:scaleType="fitXY"
