--- a/git/SmartKid/app/src/main/res/layout/activity_thinking.xml
+++ b/git/SmartKid/app/src/main/res/layout/activity_thinking.xml
@@ -3,29 +3,32 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:orientation="horizontal"
     android:layout_height="match_parent"
     android:background="@drawable/nenthinking"
+    android:orientation="horizontal"
     tools:context=".thinkingActivity">
+
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_weight="2">
+        android:layout_weight="2"
+        android:orientation="vertical">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="5"></LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1">
-            <ImageView
 
+            <ImageView
+                android:id="@+id/back"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:src="@drawable/homebutton"
-                android:onClick="ClickToFinish"/>
+                android:onClick="ClickToFinish" />
         </LinearLayout>
     </LinearLayout>
 
@@ -33,23 +36,27 @@
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_weight="3">
+        android:layout_weight="3"
+        android:orientation="vertical">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="2"></LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="4">
+
             <ImageView
                 android:id="@+id/mecung"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:onClick="ClickToMaze"/>
+                android:onClick="ClickToMaze" />
 
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
@@ -60,31 +67,37 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"></LinearLayout>
+
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="3"
         android:orientation="vertical">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="2"></LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="4">
+
             <pl.droidsonroids.gif.GifImageView
                 android:id="@+id/feed"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:onClick="ClickToFeedAnimal"/>
+                android:onClick="ClickToFeedAnimal" />
 
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="7"></LinearLayout>
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
